# mobiletun

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
src/tunneldup/: __init__.py  __main__.py  cli.py  client.py  discovery.py  paths.py  proxy.py  server.py  upstreams.py  web.py  wg.py  wgconf.py
tests/: test_add_command.py  test_cli.py  test_client_federation.py  test_proxy.py  test_pymobile_upstream.py  test_server.py  test_web.py  test_wgconf.py
